Fix CI test regressions